Added console, removed "taskbar"

--- a/the/index.html
+++ b/the/index.html
@@ -1,7 +1,4 @@
 <script src='alerts.js'></script>
-<script src='taskbar.js'></script>
+<script src='console.js'></script>
 <link rel="stylesheet" href="style.css">
-<div class="taskbar">
-  <div id="shortcut-buttons"></div>
-  <button id="add-button">+</button>
-</div>
+<div id = "console"><textarea id="consoletext"></textarea><br><textarea readonly id="cout"></textarea><br><button id = "caccept">Run JS</button></div>
