--- a/the/index.html
+++ b/the/index.html
@@ -1,3 +1,6 @@
+<!--Leave the script tag order!-->
+<script src='webofs_assign.js'></script>
+<script src='fs.js'></script>
 <script src='alerts.js'></script>
 <script src='kload.js'></script>
 <link rel="stylesheet" href="style.css">
