rename url, add api docs (bruh), find out that the format function does not work, find out that doing AlertObject.display() when its displayed crashes the web os

--- a/webofs/index.html
+++ b/webofs/index.html
@@ -6,4 +6,4 @@
 <link rel="stylesheet" href="style.css">
 <textarea id="code" name="code" rows="5" cols="10"></textarea><br>
 <textarea id="output" name="output" rows="5" cols="10" readonly></textarea><br>
-<button onclick="runCode()">Run Code</button>
+<button onclick="runCode()" id="run_js">Run JS</button>
