--- a/webofs/index.html
+++ b/webofs/index.html
@@ -4,6 +4,6 @@
 <script src='alerts.js'></script>
 <script src='kload.js'></script>
 <link rel="stylesheet" href="style.css">
-<textarea id="code" name="code" rows="5" cols="10"></textarea><br>
-<textarea id="output" name="output" rows="5" cols="10" readonly></textarea><br>
+<textarea id="code" name="code">Insert JS here!</textarea><br>
+<textarea id="output" name="output" readonly>Output here</textarea><br>
 <button onclick="runCode()" id="run_js">Run JS</button>
