--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="styling.js"></script>
   </head>
   <body>
-    <h1 class="preetytext">WebOS Centre</h1><br>
+    <h1 class="preetytext">WebOS list/h1><br>
     <a class="preetytext link" href="https://windows96.net">Windows 96</a><br>
     <a class="preetytext link" href="https://windows96.net/?live=1">Windows 96 Live Full</a><br>
     <a class="preetytext link" href="https://windows96.net/?live=1&amp;rootfs=https://windows96.net/system/images/rootfs/lite.zip">Windows 96 Live Lite</a><br>
