--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a class="preetytext link" href="https://webdows.belowaverage.org/">WebDows belowaverage</a><br>
     <a class="preetytext link" href="https://win95.ajf.me/">Windows 95 (on internet archive)</a><br>
     <a class="preetytext link" href="https://coveryourselfinoil.com/">oil XP</a><br>
-    <a class="preetytext link" href="https://illchangethislaternot.github.io/webdesk.html">Webdesk</a><br>
+    <a class="preetytext link"><s>Webdesk</s></a><br><!--https://illchangethislaternot.github.io/webdesk.html-->
     <i class="preetytext">If you want to add a WebOS to this list, DM YourHardWorkGone#7365</i>
     
   
